--- a/NotKayit/Views/Ogrenci/Index.cshtml
+++ b/NotKayit/Views/Ogrenci/Index.cshtml
@@ -14,7 +14,7 @@
                 <th>#</th>
                 <th>Adı</th>
                 <th>Soyadı</th>
-                <th>Doğum Tarihi</th> 
+                <th>Doğum Tarihi</th>
                 <th></th>
                 <th class="text-end">İşlemler</th>
             </tr>
@@ -39,13 +39,19 @@
                         <td>@ogrenci.Soyad</td>
                         <td>@ogrenci.DogumTarihi.ToString("dd.MM.yyyy")</td>
                         <td>YAS HESAPLANIP BU ALANA @ogrenci.Yas</td>
-                     
+
                         <td class="text-end">
                             <a asp-action="Details" asp-route-id="@ogrenci.Id" class="btn btn-sm btn-outline-primary me-1">
                                 <i class="bi bi-eye"></i> Görüntüle
                             </a>
                             <a asp-action="Edit" asp-route-id="@ogrenci.Id" class="btn btn-sm btn-outline-warning me-1">
                                 <i class="bi bi-pencil"></i> Düzenle
+                            </a>
+                            <a class="btn btn-info btn-sm"
+                               asp-controller="Ogrenci"
+                               asp-action="AdresCreate"
+                               asp-route-ogrenciId="@ogrenci.Id">
+                                Adresler
                             </a>
                             <a asp-action="Delete" asp-route-id="@ogrenci.Id"
                                class="btn btn-sm btn-outline-danger"
