--- a/NotKayit/Views/Ogrenci/Index.cshtml
+++ b/NotKayit/Views/Ogrenci/Index.cshtml
@@ -28,9 +28,8 @@
                             <th style="width:60px">#</th>
                             <th>Adı</th>
                             <th>Soyadı</th>
-                            <th style="width:140px">Doğum Tarihi</th>
-                            <th style="width:120px">Yaş</th>
-                            <th class="text-right" style="width:360px">İşlemler</th>
+                            <th style="width:140px">Doğum Tarihi</th> 
+                            <th class="text-center" style="width:360px">İşlemler</th>
                         </tr>
                     </thead>
 
@@ -45,32 +44,39 @@
                                 <td>@ogrenci.Ad</td>
                                 <td>@ogrenci.Soyad</td>
                                 <td>@ogrenci.DogumTarihi.ToString("dd.MM.yyyy")</td>
-                                <td>@ogrenci.Yas</td>
+                                <td class="text-center">
+                                    <div class="d-flex justify-content-center flex-wrap gap-1">
 
-                                <td class="text-right">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <a asp-action="Details" asp-route-id="@ogrenci.Id" class="btn btn-outline-primary" title="Görüntüle">
+                                        <a asp-action="Details"
+                                           asp-route-id="@ogrenci.Id"
+                                           class="btn btn-primary btn-sm px-4 mr-2"
+                                           title="Görüntüle">
                                             <i class="fas fa-eye"></i>
                                         </a>
 
-                                        <a asp-action="Edit" asp-route-id="@ogrenci.Id" class="btn btn-outline-warning" title="Düzenle">
+                                        <a asp-action="Edit"
+                                           asp-route-id="@ogrenci.Id"
+                                           class="btn btn-warning btn-sm px-4 mr-2"
+                                           title="Düzenle">
                                             <i class="fas fa-edit"></i>
                                         </a>
 
-                                        <a class="btn btn-outline-info"
-                                           asp-controller="Ogrenci"
+                                        <a asp-controller="Ogrenci"
                                            asp-action="AdresCreate"
                                            asp-route-ogrenciId="@ogrenci.Id"
+                                           class="btn btn-info btn-sm px-4 mr-2"
                                            title="Adresler">
                                             <i class="fas fa-map-marker-alt"></i>
                                         </a>
 
-                                        <a asp-action="Delete" asp-route-id="@ogrenci.Id"
-                                           class="btn btn-outline-danger"
+                                        <a asp-action="Delete"
+                                           asp-route-id="@ogrenci.Id"
+                                           class="btn btn-danger btn-sm px-4"
                                            onclick="return confirm('Bu kaydı silmek istediğinize emin misiniz?');"
                                            title="Sil">
                                             <i class="fas fa-trash"></i>
                                         </a>
+
                                     </div>
                                 </td>
                             </tr>
