--- a/NotKayit/Views/Shared/_Layout.cshtml
+++ b/NotKayit/Views/Shared/_Layout.cshtml
@@ -35,11 +35,7 @@
 
                 <li class="nav-item d-none d-sm-inline-block">
                     <a asp-controller="Home" asp-action="Index" class="nav-link">Anasayfa</a>
-                </li>
-
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a asp-controller="Guest" asp-action="Index" class="nav-link">Guest</a>
-                </li>
+                </li> 
             </ul>
 
             <!-- Right navbar links -->
@@ -55,7 +51,7 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a asp-controller="Home" asp-action="Index" class="brand-link">
+            <a asp-controller="Ogrenci" asp-action="Index" class="brand-link">
                 <img src="~/dist/img/AdminLTELogo.png" alt="NotKayit Logo" class="brand-image img-circle elevation-3" style="opacity:.8" />
                 <span class="brand-text font-weight-light">NotKayit</span>
             </a>
@@ -179,7 +175,7 @@
         <!-- /.content-wrapper -->
 
         <footer class="main-footer">
-            <strong>&copy; 2025 - NotKayit</strong>
+            <strong>&copy; 2026 - Yazılım Geliştime Daire Başkanlığı</strong>
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 1.0
             </div>
